doc: clean up and README (+Postman collection)
