# app/src/main/java/fr/uga/l3miage/library/books/BookDTO.java
@@ -1,7 +1,6 @@
 package fr.uga.l3miage.library.books;
 
 import fr.uga.l3miage.library.authors.AuthorDTO;
-import fr.uga.l3miage.data.domain.Book;
 
 import java.util.Collection;
 
@@ -9,9 +8,9 @@ public record BookDTO(
         Long id,
         String title,
         long isbn,
-        String editor,
+        String publisher,
         short year,
-        Book.Language language,
+        String language,
         Collection<AuthorDTO> authors
 ) {
 }
