# library-openapi.yaml
@@ -140,14 +140,14 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: "#/components/schemas/BaseBook"
+              $ref: "#/components/schemas/NewBook"
       responses:
         201:
           description: Created
           content:
             'application/json':
               schema:
-                $ref: "#/components/schemas/SimpleBook"
+                $ref: "#/components/schemas/Book"
         404:
           description: The author was not found
   /api/books:
@@ -191,7 +191,7 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: "#/components/schemas/SimpleBook"
+              $ref: "#/components/schemas/Book"
       responses:
         404:
           description: The book was not found
@@ -232,67 +232,59 @@ components:
           example:
             id: 1
             name: Victor Hugo
-    BaseBook:
+    NewBook:
       description: A book, with no id (for creation)
       type: object
       properties:
         title:
           type: string
         isbn:
+          description: isbn number from 10 to 13 digit as a number to simplify validation
           type: integer
           format: int64
-          minLength: 10
-          maxLength: 13
-        editor:
+          minimum: 1000000000 # 10 digits
+          maximum: 9999999999999 # 13 digits
+        publisher:
           type: string
         year:
+          description: publication year, from 10 000 BC excluded to way up in the future
           type: integer
           format: int32
-          minLength: 4
-          maxLength: 4
+          minimum: -9999 # four digit negative
+          maximum: 9999 # four digit positive
         language:
+          description: possible language of the book, two for now any can extend it. Default to "french" if none is provided.
           type: string
           enum:
-            - FRENCH
-            - ENGLISH
-          default: FRENCH
+            - french
+            - english
+          default: french
       required:
         - title
         - year
+        - language
       example:
         title: Les Misérables
         isbn: 9782266199261
         editor: Pocket
         year: 2009
-        language: FRENCH
-    SimpleBook:
-      description: A book, with an id (for update)
+        language: french
+    Book:
+      description: A book, with an id (for update) and authors (response only)
       allOf:
-        - $ref: "#/components/schemas/BaseBook"
+        - $ref: "#/components/schemas/NewBook"
         - type: object
           properties:
             id:
               type: integer
               format: int64
-          required:
-            - id
-      example:
-        id: 1
-        title: Les Misérables
-        isbn: 9782266199261
-        editor: Pocket
-        year: 2009
-        language: FRENCH
-    Book:
-      description: A book with all properties set
-      allOf:
-        - $ref: "#/components/schemas/SimpleBook"
-        - type: object
-          properties:
             authors:
               type: array
               items:
                 $ref: "#/components/schemas/Author"
+              readOnly: true
+          required:
+            - id
       example:
         id: 1
         title: Les Misérables
@@ -303,3 +295,4 @@ components:
         authors:
           - id: 1
             name: Victor Hugo
+
